# VGD_2025

./: .gitignore  README.md
01_normals_curvatures/: CMakeLists.txt  main.cpp
02_topological_operators/: CMakeLists.txt
03_spectral_transform/: CMakeLists.txt  main.cpp
04_parameterization/: CMakeLists.txt  main.cpp
