cmake_minimum_required(VERSION 3.10)
project(spectral_reconstruction)
set(cinolib_DIR <YOUR PATH TO CINOLIB>)
set(CINOLIB_USES_OPENGL_GLFW_IMGUI ON)
set(CINOLIB_USES_SPECTRA ON)
find_package(cinolib REQUIRED)
add_executable(${PROJECT_NAME} main.cpp)
target_link_libraries(${CMAKE_PROJECT_NAME} cinolib)
